client/src/pages/History.css
button {
    cursor: pointer;
    font-size: 16px;
    font-family: 'Poppins', sans-serif;
    padding: 7px;
    font-size: large;
    border: none;
    transition: background-color 0.3s;
}

#history-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #189ab4;
    color: white;
    font-family: 'Poppins', sans-serif;
    text-align: left;
    flex-direction: column;
}

#history-container h1 {
    margin-bottom: 20px;
}

#interval-navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
    width: 50%;
}

#interval-navigation h2 {
    font-size: 24px;
}

#interval-navigation button {
    width: 150px;
    border-radius: 4px;
    background-color: white;
    color: #189ab4;
}

/* Fix problem of hover not working. */
#interval-navigation button:hover {
    background-color: #0f7b8e;
    color: white;
}

.view-toggle-button {
    width: 200px;
    border-radius: 4px;
    background-color: white;
    color: #189ab4;
    margin-bottom: 50px;
}

.view-toggle-button:hover {
    background-color: #0f7b8e;
    color: white;
}

#home-button {
    width: 308px;
    border-radius: 4px;
    background-color: white;
    color: #189ab4;
}

#home-button:hover {
    background-color: #0f7b8e;
    color: white;
}

